--- a/index.html
+++ b/index.html
@@ -1,118 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>뷰 기초 익히기</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-            crossorigin="anonymous"
-        ></script>
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <style>
-            #app h4 {
-                font-family: Avenir, Helvetica, Arial, sans-serif;
-            }
-        </style>
-    </head>
-    <body class="m-4">
-        <div id="app" class="d-flex justify-content-center flex-column align-items-center">
-            <h4 class="text-primary">{{ text.name }}</h4>
-            <div>{{ nextYear('안녕하세요') }}</div>
-            <br />
-            <!-- v-bind 생략 가능 -->
-            <input v-bind:type="type" v-bind:value="inputData" class="form-control" />
-            <input :type="type" :value="inputData" class="form-control" />
-            <br />
-            <a :href="getLink('y0ng94')">깃헙 링크를 만들어보자</a>
-            <button v-on:click="alert" class="btn btn-primary">Click</button>
-            <br />
-            <div class="btn-group">
-                <button v-on:click="plus" class="btn btn-primary">더하기</button>
-                <button v-on:click="minus" class="btn btn-danger">빼기</button>
-            </div>
-            <div class="border border-dark-subtle">{{ year }}</div>
-            <br />
-            <h5>이벤트</h5>
-            <form v-on:submit.prevent="submit()" class="d-grid">
-                <input type="text" class="form-control" id="submitId" />
-                <button type="submit" class="btn btn-secondary">Submit</button>
-                <div id="submitText" class="fw-bold"></div>
-            </form>
-            <br />
-            <input :type="type" :value="inputText" @keyup="updateText" />
-            {{ inputText }}
-            <br />
-            <input :type="type" v-model="inputText2" />
-            {{ inputText2 }}
-            <br />
-            {{ message.split('').reverse().join('') }}
-            <br />
-            {{ reversedMessage }}
-            <br />
-            <button @click="changeMessage" class="btn btn-primary">Click</button>
-        </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>뷰 기초 익히기</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+			crossorigin="anonymous"
+		/>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+			crossorigin="anonymous"
+		></script>
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+		<style>
+			body {
+				position: absolute;
+				width: 70%;
+				height: 100%;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
 
-        <script>
-            new Vue({
-                el: "#app",
-                data: {
-                    text: {
-                        name: "뷰 배워보기",
-                        age: 30,
-                    },
-                    inputData: "Default",
-                    type: "text",
-                    link: "https://github.com/",
-                    year: 2023,
-                    inputText: "텍스트 동기화",
-                    inputText2: "양방향 텍스트",
-                    number: 1,
-                    message: "안녕하세요",
-                },
-                methods: {
-                    getLink(text) {
-                        return this.link + text;
-                    },
-                    nextYear(greeting) {
-                        return greeting + "! 내년에는 " + (this.text.age + 1) + "살 입니다.";
-                    },
-                    // function 생략 가능
-                    otherMethod: function () {
-                        this.nextYear();
-                    },
-                    alert() {
-                        alert("Hi");
-                    },
-                    plus() {
-                        this.year++;
-                    },
-                    minus() {
-                        this.year--;
-                    },
-                    submit() {
-                        document.getElementById("submitText").textContent = document.getElementById("submitId").value;
-                    },
-                    updateText() {
-                        this.inputText = event.target.value;
-                    },
-                    changeMessage() {
-                        this.message = "헬로우 월드";
-                    },
-                },
-                computed: {
-                    reversedMessage() {
-                        return this.message.split("").reverse().join("");
-                    },
-                },
-            });
-        </script>
-    </body>
+			#title h4 {
+				font-family: Avenir, Helvetica, Arial, sans-serif;
+				font-weight: bolder;
+			}
+
+			#app hr {
+				margin: 0 0 1rem 0;
+			}
+
+			.red {
+				color: red;
+			}
+
+			.font-bold {
+				font-weight: bold;
+			}
+		</style>
+	</head>
+	<body class="m-4">
+		<div id="title">
+			<h4 class="text-primary">{{ text.name }}</h4>
+		</div>
+		<div id="app" class="d-flex justify-content-center flex-column-reverse align-items-center">
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">함수 호출 및 텍스트 출력</span>
+				<hr />
+				<div>{{ nextYear('안녕하세요') }}</div>
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">바인딩</span>
+				<hr />
+				<!-- v-bind 생략 가능 -->
+				<input v-bind:type="type" v-bind:value="inputData" class="form-control" />
+				<input :type="type" :value="inputData" class="form-control" />
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">링크</span>
+				<hr />
+				<a :href="getLink('y0ng94')">깃헙 링크를 만들어보자</a>
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">이벤트</span>
+				<hr />
+				<button v-on:click="alert" class="btn btn-primary">Click</button>
+				<div class="btn-group">
+					<button v-on:click="plus" class="btn btn-primary">더하기</button>
+					<button v-on:click="minus" class="btn btn-danger">빼기</button>
+				</div>
+				<div class="border border-dark-subtle">{{ year }}</div>
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">이벤트 감지</span>
+				<hr />
+				<form v-on:submit.prevent="submit()" class="d-grid">
+					<input type="text" class="form-control" id="submitId" />
+					<button type="submit" class="btn btn-secondary">누르면 아래 텍스트 생김</button>
+					<div id="submitText" class="fw-bold"></div>
+				</form>
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">키업 이벤트 : 메소드</span>
+				<hr />
+				<input :type="type" class="form-control" :value="inputText" @keyup="updateText" />
+				{{ inputText }}
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">양방향 이벤트 : 컴퓨티드</span>
+				<hr />
+				<input :type="type" class="form-control" v-model="inputText2" />
+				{{ inputText2 }}
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">메소드와 컴퓨티드</span>
+				<hr />
+				{{ message.split('').reverse().join('') }} {{ reversedMessage }}
+				<button @click="changeMessage" class="btn btn-primary">Click</button>
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">왓치</span>
+				<hr />
+				{{ watchMessage }}
+				<button @click="changeWatchMessage" class="btn btn-primary">Click</button>
+				{{ updated }}
+			</div>
+			<br />
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">스타일 바인딩</span>
+				<hr />
+				<div :class="{ red: isRed, 'font-bold': isBold}" :style="{ fontSize: size + 'px' }">Hello</div>
+				<button @click="styleUpdate" class="btn btn-success">Click</button>
+			</div>
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">조건문</span>
+				<hr />
+				<button @click="changeTrueFalse" class="btn btn-success">{{ show }}</button>
+				<template v-if="show">출력 상태가 true</template>
+				<template v-else>출력 상태가 false</template>
+			</div>
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">조건문 if-else</span>
+				<hr />
+				<button @click="changeNumber" class="btn btn-success">{{ showNumber }}</button>
+				<template v-if="showNumber === 1">출력 숫자가 1</template>
+				<template v-else-if="showNumber === 2">출력 숫자가 2</template>
+				<template v-else>출력 숫자가 그 이상</template>
+			</div>
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">Show</span>
+				<hr />
+				<div v-show="showForToggle">Yes</div>
+				<button @click="toggleShow" class="btn btn-dark">Toggle</button>
+			</div>
+
+			<div class="w-100 border border-3 border-primary-subtle rounded p-2">
+				<span class="text-secondary fst-italic">반복문</span>
+				<hr />
+				보통 of 대신 in 씀
+				<div v-for="(person, index) in people" :key="id">{{ person.name }} {{ person.age }} {{ index }}</div>
+				<div v-for="person of people">{{ person.name }} {{ person.age }}</div>
+			</div>
+		</div>
+	</body>
+	<script src="./index.js"></script>
 </html>
